--- a/Editor/com.freakshowstudio.newpackage.Editor.asmdef
+++ b/Editor/com.freakshowstudio.newpackage.Editor.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "com.freakshowstudio.newpackage.Editor",
+    "rootNamespace": "FreakshowStudio.NewPackage",
     "references": [],
     "optionalUnityReferences": [],
     "includePlatforms": [
