--- a/Editor/FreakshowStudio.NewPackage.Editor.asmdef
+++ b/Editor/FreakshowStudio.NewPackage.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "com.freakshowstudio.newpackage.Editor",
+    "name": "FreakshowStudio.NewPackage.Editor",
     "rootNamespace": "FreakshowStudio.NewPackage",
     "references": [],
     "optionalUnityReferences": [],
