--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "com.freakshowstudio.newpackage",
-    "displayName": "New Package",
+    "displayName": "Create New Package Wizard",
     "version": "1.0.0",
     "unity": "2018.3",
     "description": "Wizard to create a new package",
