--- a/package.json
+++ b/package.json
@@ -10,5 +10,14 @@
         "wizard"
     ],
     "category": "Scripting",
-    "dependencies": {}
+    "dependencies": {},
+    "author": {
+      "name": "Freakshow Studio AS",
+      "url": "https://github.com/freakshowstudio"
+    },
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/freakshowstudio/com.freakshowstudio.newpackage"
+    },
+    "license": "MIT"
 }
